--- a/save.ipynb
+++ b/save.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "43dc6971-bc1d-43a7-89e8-abfe52c5e76e",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "6ff61a7f-db70-4c50-b4c7-856f29c40adc",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "f4dd39d4-2242-4c09-ad0b-149e20d1d8d8",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3377\n"
+      "3378\n"
      ]
     }
    ],
@@ -103,17 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "38adb2ea-527e-41b9-8074-1c1b31a2036f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3284"
+       "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,28 +128,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "08985bd2-350d-47a6-87a9-7d33de5db495",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "600991\n",
-      "('Connection aborted.', ConnectionResetError(54, 'Connection reset by peer'))\n",
-      "600890\n",
-      "('Connection aborted.', ConnectionResetError(54, 'Connection reset by peer'))\n",
-      "600656\n",
-      "('Connection aborted.', ConnectionResetError(54, 'Connection reset by peer'))\n",
-      "600632\n",
-      "('Connection aborted.', ConnectionResetError(54, 'Connection reset by peer'))\n",
-      "000556\n",
-      "('Connection aborted.', ConnectionResetError(54, 'Connection reset by peer'))\n",
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "from datetime import datetime\n",
@@ -202,8 +184,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "de1e1ce7-ec26-483d-a864-92fc5abb110b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "None or 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e2c32f1-6750-417d-a4bb-cbc06f2138ee",
    "metadata": {},
    "outputs": [],
    "source": []
