--- a/测试.ipynb
+++ b/测试.ipynb
@@ -273,59 +273,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "905d744b-6bd0-46a6-9ac3-4b32cdf45e19",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pymongo\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# docker pull mongo:latest\n",
+    "# docker run -itd --name mongo -p 27017:27017 mongo\n",
+    "\n",
+    "myclient = pymongo.MongoClient(\"mongodb://localhost:27017/\")\n",
+    "mydb = myclient[\"dbs\"]\n",
+    "quo_col = mydb.quotation\n",
+    "concept = mydb.concept"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 102,
+   "id": "62f272a9-e638-4df7-bf62-0b0ed3b00751",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import akshare as ak\n",
+    "symbol='600418'\n",
+    "\n",
+    "stock_zh_a_hist_df = ak.stock_zh_a_hist(symbol=symbol, period=\"daily\", start_date=\"20220810\", end_date=\"20230512\",\n",
+    "                                            adjust=\"qfq\")\n",
+    "\n",
+    "dct = stock_zh_a_hist_df.to_dict(orient='records')\n",
+    "now_datetime = datetime.now().strftime('%Y-%m-%d %H:%M:%S')\n",
+    "data = {\n",
+    "    '_id':symbol,\n",
+    "    'time': now_datetime,\n",
+    "    'data': dct\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
    "id": "c2bc5afe-d186-4ab8-9d4d-5d80c6650f11",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['序号',\n",
-       " '代码',\n",
-       " '名称',\n",
-       " '最新价',\n",
-       " '涨跌幅',\n",
-       " '涨跌额',\n",
-       " '成交量',\n",
-       " '成交额',\n",
-       " '振幅',\n",
-       " '最高',\n",
-       " '最低',\n",
-       " '今开',\n",
-       " '昨收',\n",
-       " '量比',\n",
-       " '换手率',\n",
-       " '市盈率-动态',\n",
-       " '市净率',\n",
-       " '总市值',\n",
-       " '流通市值',\n",
-       " '涨速',\n",
-       " '5分钟涨跌',\n",
-       " '60日涨跌幅',\n",
-       " '年初至今涨跌幅']"
+       "<pymongo.results.UpdateResult at 0x12cef5280>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns.tolist()"
+    "quo_col.update_one({'_id': symbol}, {'$set': data}, upsert=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "efb304c8-fe3a-4048-9fa0-38eff9d9a116",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2023-05-13 00:51:21'"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quo_col.find_one({'_id': symbol})['time']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efb304c8-fe3a-4048-9fa0-38eff9d9a116",
+   "id": "82785f56-d00a-4719-8928-b5fc1ad2fb26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "concept.find_one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8598313d-2cbb-4b82-9820-02aeb5138cb0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -333,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82785f56-d00a-4719-8928-b5fc1ad2fb26",
+   "id": "0f9a2e6d-32e8-4417-a767-21844dd18201",
    "metadata": {},
    "outputs": [],
    "source": []
